# wa_llm

./: .gitignore  Dockerfile  Dockerfile.whatsapp  FINAL_SECURITY_AUDIT.md  FINAL_SYSTEM_OPTIMIZATIONS.md  GROUP_FILTERING_SECURITY.md  KNOWLEDGE_BASE_DEBUGGING.md  KNOWLEDGE_BASE_FLOW_VERIFICATION.md  MESSAGE_STORAGE_ANALYSIS.md  MESSAGE_STORAGE_FIX_SUMMARY.md  README.md  RENDER_DEBUGGING_SOLUTION.md  RESPONSIVE_TOPIC_LOADING_IMPROVEMENTS.md  SECURITY_TEST_KNOWLEDGE_BASE.py  alembic.ini  docker-cloud.yml  docker-compose.base.yml  docker-compose.yml  handler_reaction_example.py  pyproject.toml  test_reaction_fix.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: check_status.py  daily_summary.py  ingest.py  load_new_kbtopics.py  load_new_kbtopics_task.py  main.py  summarize_and_send_to_groups_task.py
migrations/: env.py
migrations/versions/: 1751740333_add_reaction_table.py
notebooks/: import_wa_group_history.ipynb
src/api/: deps.py  knowledge_base_status.py  load_new_kbtopics.py  load_new_kbtopics_api.py  status.py  summarize_and_send_to_group_api.py  webhook.py
src/config/: __init__.py
src/daily_ingest/: daily_ingest.py
src/handler/: __init__.py  base_handler.py  knowledge_base_answers.py  router.py  test_router.py  whatsapp_group_link_spam.py
src/load_new_kbtopics/: __init__.py
src/models/: __init__.py  group.py  message.py  reaction.py  sender.py  test_message.py
src/summarize_and_send_to_groups/: __init__.py
src/utils/: chat_text.py  phone_mapper.py
src/whatsapp/: client.py  init_groups.py  jid.py  models.py
